--- a/README.org
+++ b/README.org
@@ -20,6 +20,9 @@ This emacs personal configs can be used in:
   also be in github.
 
 
+For see full documents of the introduction of =entropy-emacs= please
+see [[https://github.com/c0001/entropy-emacs-doc/blob/master/org/entropy-emacs_introduction.org][here]].
+
 *Branches descriptioin:*
 
 - master: with the stable packages and config file
@@ -29,6 +32,31 @@ This emacs personal configs can be used in:
 
 - dev: with the quickly and untesting config by more newly implemented
   thoughts and waiting for merging into master.
+
+For user daily using the master branch was enoughly and statble, which
+entropy-emacs suggested to clone.
+
+*Extensions:*
+
+=entropy-emacs= using various third-party extensions from [[https://elpa.gnu.org/packages/][elpa]], [[https://melpa.org][melpa]],
+and some ones hosted on _gihtub.com_, thus most of them are not
+wrappered within this repo, for reason of moduling
+management. There're two main corresponding project tied with
+=entropy-emacs= for as the archive of current using extensions
+collection:
+
+1) [[https://github.com/c0001/entropy-emacs-deps][entropy-emacs-deps]]
+2) [[https://github.com/c0001/entropy-emacs-extensions][entropy-emacs-extensions]]
+
+For see there explicit meaning, see the commentary of
+[[file:elements/entropy-emacs-ext.el][entropy-emacs-ext.el]].
+
+Notice for that, project =entropy-emacs-deps= are the forcely
+dependencies for =entropy-emacs=, you must cloning it in your home
+directory and then archived it named as =.entropy-emacs-deps= (with
+build for then) before your calling emacs shown-up, or you will
+recieve the warning prompting after the startup.
+
 
 *Thanks to:*
 
