--- a/elements/bugs.org
+++ b/elements/bugs.org
@@ -9,83 +9,170 @@
 
 The bug collection for emacs recoreded for =entropy-emacs=.
 
+* Introduction 
 
-* HANGUP Bug for 'yes-or-no-p' (founed when using 'doom-modeline'):
-  CLOSED: [2019-07-29 Mon 18:44]
-  :PROPERTIES:
-  :CUSTOM_ID: h-0c3ab89e-a470-42d2-946e-4f217ea2f20c
-  :END:
+This file archives the bugs occurrence for using =entropy-emacs=, bugs
+occurs both for =vanilla emacs= or =entropy-emacs=, since some bug are
+natively of specific emacs release.
 
-  - State "HANGUP"     from "MARKING"    [2019-07-29 Mon 18:44] \\
-    Has patched by specific 'kill-buffer' action, waiting for bug reply
-    from emacs-bug-mailist.
+All the bug recorded in this file is recognized as one todo entry
+uppon on the Org-Mode feature, using org-mode to manage the whole
+toto-tree for those bugs. 
 
-*Bug description:*
+The todo keys are mapped specially for =entropy-emacs=, with the
+following valid keys:
 
-If using the modeline who using all-the-icons as the segments'
-component, that when using pop-up window to show 'ansi-term' will
-cause the problem during 'kill-buffer' operation for the spawn process
-kill confirmation returns the error for that:
+1) TODO    : indicating for repairing this bug, as the marked-up way, but
+             with high priority.
 
-``` error-info
-Debugger entered--Lisp error: (error "Selecting deleted buffer")
-  term-emulate-terminal(#<process *ansi-term*> "your-shell-$ps1")
-```
+2) DOING   : the current bug repairing procedure including.
 
-But when you using the 'y-or-n-p' redefine the 'yes-or-no-p', its
-gone.
+3) DONE    : bug has been fixed up.
 
-The bug trigger also referred to font setting that if using some fonts
-specific (e.g. liberation-mono fonts) unless the google-noto family
-will get the error when the 'yes-or-no-p' redefination not did as
-demoted in above paragraph.
+4) HANGUP  : can not find the ideas for fixing this bug, hoped for help.
 
-*Bug Reproduce:*
+5) MARKING : minor bug doesn't affecting using but marked for
+             remembering fixing as attitude for emacser.
 
-- Operation Environment:
+6) UPDATE  : Updating the previous "DONE" status for updating the new
+             issue.
 
-  Platform: GNU/Linux
-  Distro: Manjaro (4.19.60-1-MANJARO GNU/Linux)
-  Emacs-Version: 26.x all serial
-  Emacs Configuration: Vanilla
+7) CANCEL  : Canceling the bug fixing task as that its hopeless for as.
 
-1. Put below elisp snippet into `init.el`
+* Conribution 
 
-``` elisp
-(package-initialize)
-(setq custom-file (expand-file-name "custom.el" user-emacs-directory))
-(setq package-archives '(("gnu"   . "http://elpa.gnu.org/packages/")
-                         ("melpa" . "http://melpa.org/packages/")
-                         ("org"   . "https://orgmode.org/elpa/")))
+Bug fixing PR are welcom, if you have fixed one bug or finding up the
+bug caused source. The PR must using the TODO keywords refered to the
+above demotion to update the bug entry status and giving the new
+description for the corresponding sector.
 
-;; Please install 'liberation-ttf' first
-(set-face-attribute 'default nil :family "Liberation Mono" :font "Liberation Mono")
+Or oppsite for bug fixing PR, you can commit new bug to this file with
+limitation of the bug of vanilla emacs or =entropy-emacs=.
 
-(defun temp/test-bug ()
-  (interactive)
-  (when (not (one-window-p))
-    (delete-other-windows)
-    (about-emacs))
-  (let ((_w (split-window
-             (selected-window)
-             25
-             'below)))
-    (select-window _w)
-    (ansi-term "bash")
-    (setq-local kill-buffer-hook nil)))
+* Bugs 
+** HANGUP Bug for 'yes-or-no-p' (founed when using 'doom-modeline'):
+   CLOSED: [2019-07-29 Mon 18:44]
+   :PROPERTIES:
+   :CUSTOM_ID: h-0c3ab89e-a470-42d2-946e-4f217ea2f20c
+   :END:
 
-(global-set-key (kbd "<f9>") #'temp/test-bug)
+   - State "HANGUP"     from "MARKING"    [2019-07-29 Mon 18:44] \\
+     Has patched by specific 'kill-buffer' action, waiting for bug reply
+     from emacs-bug-mailist.
 
-(global-set-key (kbd "C-x k") 'kill-buffer-and-window)
+ *Bug description:*
 
-(unless (package-installed-p 'doom-modeline)
-  (package-refresh-contents)
-  (package-install 'doom-modeline))
+ If using the modeline who using all-the-icons as the segments'
+ component, that when using pop-up window to show 'ansi-term' will
+ cause the problem during 'kill-buffer' operation for the spawn process
+ kill confirmation returns the error for that:
 
-(doom-modeline-mode)
-```
+ ``` error-info
+ Debugger entered--Lisp error: (error "Selecting deleted buffer")
+   term-emulate-terminal(#<process *ansi-term*> "your-shell-$ps1")
+ ```
 
-2. Start emacs and hit '<f9>', then try to kill the selected buffer
+ But when you using the 'y-or-n-p' redefine the 'yes-or-no-p', its
+ gone.
 
-   Notice: the "yes-or-no" input string must type correcly at the firt
-   input time, otherwise the bug reproduce will not did as expecting.
+ The bug trigger also referred to font setting that if using some fonts
+ specific (e.g. liberation-mono fonts) unless the google-noto family
+ will get the error when the 'yes-or-no-p' redefination not did as
+ demoted in above paragraph.
+
+ *Bug Reproduce:*
+
+ 1) Operation Environment:
+
+    Platform: GNU/Linux
+    Distro: Manjaro (4.19.60-1-MANJARO GNU/Linux)
+    Emacs-Version: 26.x all serial
+    Emacs Configuration: Vanilla
+
+ 2) Put below elisp snippet into `init.el`
+   
+    #+BEGIN_SRC elisp
+      (package-initialize)
+      (setq custom-file (expand-file-name "custom.el" user-emacs-directory))
+      (setq package-archives '(("gnu"   . "http://elpa.gnu.org/packages/")
+                               ("melpa" . "http://melpa.org/packages/")
+                               ("org"   . "https://orgmode.org/elpa/")))
+
+      ;; Please install 'liberation-ttf' first
+      (set-face-attribute 'default nil :family "Liberation Mono" :font "Liberation Mono")
+
+      (defun temp/test-bug ()
+        (interactive)
+        (when (not (one-window-p))
+          (delete-other-windows)
+          (about-emacs))
+        (let ((_w (split-window
+                   (selected-window)
+                   25
+                   'below)))
+          (select-window _w)
+          (ansi-term "bash")
+          (setq-local kill-buffer-hook nil)))
+
+      (global-set-key (kbd "<f9>") #'temp/test-bug)
+
+      (global-set-key (kbd "C-x k") 'kill-buffer-and-window)
+
+      (unless (package-installed-p 'doom-modeline)
+        (package-refresh-contents)
+        (package-install 'doom-modeline))
+
+      (doom-modeline-mode)
+    #+END_SRC
+
+ 3) Start emacs and hit '<f9>', then try to kill the selected buffer
+
+    Notice: the "yes-or-no" input string must type correcly at the firt
+    input time, otherwise the bug reproduce will not did as expecting.
+
+** MARKING Ibus input bug for full-screen occurrence  (entropy-emacs only) :entropy-emacs:
+   :PROPERTIES:
+   :CUSTOM_ID: h-74ea996b-2f5d-4872-b5e8-2dc152e466a1
+   :END:
+
+ - State "MARKING"    from              [2019-07-31 Wed 01:20]
+
+
+ #+BEGIN_EXAMPLE
+ OS: Manjaro Linux (Linux 4.19.60-1-MANJARO #1 SMP PREEMPT Sun Jul 21 12:17:26 UTC 2019 x86_64 GNU/Linux)
+ neofetch:
+
+ entropy@entropy-pc 
+ ██████████████████  ████████   ------------------ 
+ ██████████████████  ████████   OS: Manjaro Linux x86_64 
+ ██████████████████  ████████   Host: Satellite L700 PSK12Q-01600D 
+ ████████            ████████   Kernel: 4.19.60-1-MANJARO 
+ ████████  ████████  ████████   Uptime: 13 hours, 51 mins 
+ ████████  ████████  ████████   Packages: 1284 (pacman) 
+ ████████  ████████  ████████   Shell: bash 5.0.7 
+ ████████  ████████  ████████   Resolution: 1366x768 
+ ████████  ████████  ████████   DE: GNOME 3.32.2 
+ ████████  ████████  ████████   Theme: Matcha-dark-sea [GTK2/3] 
+ ████████  ████████  ████████   Icons: Papirus-Dark-Maia [GTK2/3] 
+ ████████  ████████  ████████   Terminal: gnome-terminal 
+ ████████  ████████  ████████   CPU: Intel i5-2410M (4) @ 2.900GHz 
+                                GPU: NVIDIA GeForce GT 525M 
+                                Memory: 2831MiB / 5941MiB 
+
+ #+END_EXAMPLE
+
+ 1) Bug description:
+
+    When using ibus (cjk backend of =rime=) in emacs for full-screen
+    occurrence, the ime-tooltip display will disapear after few chars
+    typing. it's so strange.
+
+ 2) Influences aspects suspects
+
+    - Font spec configuration (e.g. =entropy-emacs-font-set.el=)
+    - Ui spec configurations
+    - global-disable-mouse-mode
+    - shackle window popup feature (ibus tooltip losst when popout the
+      shackle buffer at the first time)
+
+   
